
buildscript {
    ext {
        // version numbers, mostly for testing
        junit4_Version            = '4.12'
        junitVintage_Version      = '4.12.3'
        junitPlatform_Version     = '1.2.0'
        junitJupiter_Version      = '5.2.0'
        mockito_Version           = '2.18.3'
        compile_testing_Version   = '0.15'
        commons_io_Version        = '2.5'
        guava_Version             = '23.0'
        generex_Verson            = '1.0.2'
        log4j_Version             = '2.9.0'

        jacoco_Version            = '0.8.1'
        coverAlls_Version         = '2.8.1'

        immutables_Version        = '2.6.1'

    }

    repositories {
        jcenter()
    }
    dependencies {
        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:${coverAlls_Version}"
   	}
}


description = 'Java to TypeScript Type Emitter Parent Project'

allprojects {
    version="0.5.0-SNAPSHOT"
    group="com.github.dzuvic"
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'
    
    repositories {
        mavenCentral()
    }
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
    }


    jacoco {
        toolVersion = "${jacoco_Version}"
    }


    jacocoTestReport {
        reports {
            xml.enabled = true
            xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
            html.enabled = false
        }
    }
}

